package mei.designpattern.composite.structure;

public class Leaf extends Component {
    @Override
    public void add(Component c) {
        // catch exception
    }

    @Override
    public void remove(Component c) {
        // catch exception
    }

    @Override
    public Component getChild(int i) {
        // catch exception
        return null;
    }

    @Override
    public void operation() {
        // some code here
    }
}
