@startuml
title
Transparent composite pattern
end title

abstract class Component {
+{abstract}operation()
+{abstract}add(Component c)
+{abstract}remove(Component c)
+{abstract}getChild(int i)
}

class Leaf {
+operation()
}

class Composite {
+operation()
+add(Component c)
+remove(Component c)
+getChild(int i)
}
note left of Composite
    for (Component c : children) {
        c.operation();
    }
end note

Component <|-left- Leaf
Component <|-- Composite
Component <--o "children" Composite
@enduml